@@ -1,7 +1,8 @@
 from pyasn1.type import base
 from pysnmp import nextid
 from pysnmp.entity import config
-from pysnmp.entity.rfc3413 import ntforg, context, mibvar
+from pysnmp.entity.rfc3413 import ntforg, context
+from pysnmp.entity.rfc3413.oneliner.mibvar import MibVariable
 from pysnmp.entity.rfc3413.oneliner import cmdgen
 
 # Auth protocol
@@ -99,29 +100,29 @@ class AsynNotificationOriginator(cmdgen.AsynCommandGenerator):
         (cbFun, cbCtx) = cbInfo
         notifyName = self.cfgNtfOrg(authData, transportTarget, notifyType)
         if notificationType:
-            name, oid = mibvar.mibNameToOid(
-                self.mibViewController, notificationType
-                )
-            notificationType = name + oid
+            if isinstance(notificationType, MibVariable):
+                notificationType = notificationType.resolveWithMib(self.mibViewController, oidOnly=True)
+            elif isinstance(notificationType[0], tuple):  # legacy
+                notificationType = MibVariable(notificationType[0][0], notificationType[0][1], *notificationType[1:]).resolveWithMib(self.mibViewController)
         if varBinds:
             __varBinds = []
             for varName, varVal in varBinds:
-                name, oid = mibvar.mibNameToOid(
-                    self.mibViewController, varName
-                    )
-                if not isinstance(varVal, base.Asn1ItemBase):
-                    ((symName, modName), suffix) = mibvar.oidToMibName(
-                        self.mibViewController, name + oid
-                        )
-                    syntax = mibvar.cloneFromMibValue(
-                        self.mibViewController, modName, symName, varVal
-                        )
-                    if syntax is None:
-                        raise error.PySnmpError(
-                            'Value type MIB lookup failed for %r' % (varName,)
-                            )
-                    varVal = syntax.clone(varVal)
-                __varBinds.append((name + oid, varVal))
+                if isinstance(varName, MibVariable):
+                    varName.resolveWithMib(self.mibViewController)
+                    if not isinstance(varVal, base.AbstractSimpleAsn1Item):
+                        varVal = varName.getMibNode().getSyntax().clone(varVal)
+                elif isinstance(varName[0], tuple):  # legacy
+                    varName = MibVariable(varName[0][0], varName[0][1], *varName[1:]).resolveWithMib(self.mibViewController)
+                    if not isinstance(varVal, base.AbstractSimpleAsn1Item):
+                        varVal = varName.getMibNode().getSyntax().clone(varVal)
+                else:
+                    if isinstance(varVal, base.AbstractSimpleAsn1Item):
+                        varName = MibVariable(varName).resolveWithMib(self.mibViewController, oidOnly=True)
+                    else:
+                        varName = MibVariable(varName).resolveWithMib(self.mibViewController)
+                        varVal = varName.getMibNode().getSyntax().clone(varVal)
+                        
+                __varBinds.append((varName, varVal))
         else:
             __varBinds = None
 
